# MemeCLI

./: Cargo.toml  README.md  meme.txt
src/: main.rs  models.rs  templates.rs
